# depensage

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
classifier/: __init__.py  feature_extraction.py  neural_classifier.py
classifier/tests/: test_feature_extraction.py  test_neural_classifier.py
depensage/: __init__.py  main.py
depensage/classifier/: __init__.py  bank_lookup.py  cc_lookup.py  income_lookup.py  lookup.py
depensage/classifier/tests/: test_bank_lookup.py  test_lookup.py
depensage/config/: __init__.py  settings.py
depensage/config/tests/: test_settings.py
depensage/engine/: __init__.py  bank_parser.py  carryover.py  dedup.py  expense_processor.py  formatter.py  lookup_updater.py  pipeline.py  savings_allocator.py  staging.py  statement_parser.py  verification.py  virtual_month.py
depensage/engine/tests/: test_bank_parser.py  test_dedup.py  test_expense_processor.py  test_formatter.py  test_lookup_updater.py  test_pipeline.py  (+6 more)
depensage/sheets/: __init__.py  cli.py  cli_commands.py  cli_helpers.py  cli_review.py  sheet_utils.py  spreadsheet_handler.py
depensage/web/: app.py  auth.py  main.py  models.py  session.py
docs/: cc-verification.md  coding-conventions.md  future.md  pipeline.md  spreadsheet-structure.md  webapp.md
engine/tests/: test_expense_processor.py  test_statement_parser.py
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css
scripts/: plant_markers.py  plant_section_markers.py
sheets/tests/: test_sheet_utils.py
(+28 files in other folders)
